syntax = "proto3";
package ad;

service Ad {
  // 生成广告订单
  rpc InitAdOrder(InitAdOrderReq) returns(InitAdOrderAck){}
  // 查询广告订单
  rpc GetAdOrder(GetAdOrderReq) returns(GetAdOrderAck){}
  // 更新广告订单
  rpc UpdateAdOrder(UpdateAdOrderReq) returns(UpdateAdOrderAck){}
  // 获取广告奖励
  rpc GetAdAwards(GetAdAwardsReq) returns(GetAdAwardsAck){}
  // 获取广告点
  rpc GetAdSpots(GetAdSpotsReq) returns(GetAdSpotsAck){}
}

enum AdOrderState {
  Init = 0;     // 初始化
  Cancel = 1;   // 中途取消
  Finish = 2;   // 已看完
  Complete = 3; // 已领奖
}

message AwardConfig {
  int32 index = 1;
  int32 min_num = 2;
  int32 max_num = 3;
}

message Award {
  int32 index = 1;
  int32 num = 2;
}

message Pair {
  string key = 1;
  string value = 2;
}

message IdItem {
  int32 channel = 1;
  string id = 2;
  int32 percentage = 3;
}

message Order {
  string id = 1;
  string service = 2;
  int64  uid = 3;
  int32  aid = 4;
  repeated Award awards = 5;
  AdOrderState   state = 6;
  int64  create_time = 7;
  int64  update_time = 8;
}

message Record {
  int32 area = 1;
  int32 type = 2;
  int32 cur_num = 3;
  int32 max_num = 4;
  repeated AwardConfig awards = 5; 
  string desc = 6;
  repeated IdItem ids = 7;
}

// 生成广告点订单
message InitAdOrderReq {
  string  service = 1;
  int64		uid			= 2;
  int32 	aid 	  = 3;
  repeated Award awards = 4;
  repeated Pair params = 5;
}

message InitAdOrderAck {
  int32  err_code = 1;
  string err_msg  = 2;
  string oid      = 3;
}

// 查询广告订单
message GetAdOrderReq {
  int64  uid = 1;
  int64  date = 2; // 选填
  string oid = 3;  // 选填
}

message GetAdOrderAck {
  int32  err_code = 1;
  string err_msg  = 2;
  repeated Order orders = 3;
}

// 更新广告订单
message UpdateAdOrderReq {
  string oid = 1; 
  int32 state = 2;
}

message UpdateAdOrderAck {
  int32  err_code = 1;
  string err_msg  = 2;
  Order  order = 3;
}

// 获取广告奖励
message GetAdAwardsReq {
  string oid = 1; 
}

message GetAdAwardsAck {
  int32  err_code = 1;
  string err_msg  = 2;
  repeated Award awards = 3;
}

// 获取广告点
message GetAdSpotsReq {
  int64  uid = 1;
}

message GetAdSpotsAck {
  int32  err_code = 1;
  string err_msg  = 2;
  repeated Record records = 3;
}

message AdSpotDispNoti {
  int32 aid = 1;
  repeated Pair params = 2;
}

message PublishNoti {
  map<string, string> params = 1;
}